Update person and tense

--- a/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
@@ -12,7 +12,7 @@ This is the third in a [three-part guide](./intro.mdx) on how to build an app fo
 
 :::
 
-In this final part of the app example, you build a frontend (UI) that allows end-users to discover trades and interact with listed escrows.
+In this final part of the app example, you will build a frontend (UI) that allows end-users to discover trades and interact with listed escrows.
 
 ## Prerequisites
 
