--- a/sdk/docs/pages/dapp-kit/wallet-components/ConnectButton.mdx
+++ b/sdk/docs/pages/dapp-kit/wallet-components/ConnectButton.mdx
@@ -21,3 +21,6 @@ All props are optional.
 
 - `connectText = "Connect Wallet"` - The text that displays in the button when the user is not
   currently connected to a wallet.
+- `walletFilter` - A filter function that receives a wallet instance, and returns a boolean
+  indicating whether the wallet should be displayed in the wallet list. By default, all wallets are
+  displayed.
