--- a/sdk/docs/pages/dapp-kit/wallet-components/ConnectModal.mdx
+++ b/sdk/docs/pages/dapp-kit/wallet-components/ConnectModal.mdx
@@ -60,9 +60,15 @@ Click **Connect** to connect your wallet and see the previous code in action:
 - `open` - The controlled open state of the dialog.
 - `onOpenChange` - Event handler called when the open state of the dialog changes.
 - `trigger` - The trigger button that opens the dialog.
+- `walletFilter` - A filter function that receives a wallet instance, and returns a boolean
+  indicating whether the wallet should be displayed in the wallet list. By default, all wallets are
+  displayed.
 
 ## Uncontrolled props
 
 - `defaultOpen` - The open state of the dialog when it is initially rendered. Use when you do not
   need to control its open state.
 - `trigger` - The trigger button that opens the dialog.
+- `walletFilter` - A filter function that receives a wallet instance, and returns a boolean
+  indicating whether the wallet should be displayed in the wallet list. By default, all wallets are
+  displayed.
